Fix: modals z-index 9999999 to be above alt-header on mobile

--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -2885,7 +2885,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 99999;
+	z-index: 9999999;
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity 0.4s ease, visibility 0.4s ease;
@@ -3195,7 +3195,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 99999;
+	z-index: 9999999;
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity 0.4s ease, visibility 0.4s ease;
